--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://website-ai-agent-widget.vercel.app/widget.js"></script>
+    <script>
+      window.addEventListener("load", function () {
+        if (window.initAIChat) {
+          window.initAIChat();
+        } else {
+          console.error("initAIChat is not defined!");
+        }
+      });
+    </script>
   </body>
 </html>
