--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <title>Portfolio Sebastian</title>
+    <title>Sebastian Prado</title>
   </head>
   <body>
     <div id="root"></div>
